# rusteroids

./: .gitignore  Cargo.toml  README.md  flake.nix  shell-norust.nix  shell-rustup.nix  shell-simple.nix
assets/ignore/: background_stars.ase  background_stars.aseprite  logo.aseprite  morph_boss.aseprite  player.aseprite  power_up_shield.aseprite  power_up_ship.aseprite  power_up_weapon.aseprite
assets/particles/: explosion_energy_l.ron  explosion_energy_s.ron  explosion_l.ron  explosion_m.ron  explosion_s.ron  explosion_xl.ron  spaceship_exhaust.ron
scripts/: clean-rusteroids-files.ps1  copy-assets.ps1
src/: asteroids.rs  background_stars.rs  camera.rs  collision.rs  explosion.rs  game_state.rs  game_world.rs  in_game_ui.rs  main.rs  player.rs  player_shield.rs  player_weapon.rs  power_ups.rs  projectile.rs  shared.rs  shared_events.rs  shared_resources.rs  waves.rs
src/enemies/: boss_morph.rs  mod.rs  ufo.rs
src/in_game_ui/: game_over_menu.rs  interactive_ui.rs  mod.rs  pause_menu.rs  static_ui.rs
src/player/: components.rs  mod.rs  systems.rs
src/projectile/: components.rs  mod.rs  systems.rs
www/public/: index.html  restart-audio-context.js  style.css
