[package]
name = "rusteroids"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = ["wayland"] }
bevy-inspector-egui = "0.25.0"
rand = { version = "0.8.5", features = ["small_rng"] }
bevy_prototype_lyon = "0.12.0"
bevy_rapier2d = "0.27.0"
bevy_enoki = "0.2.2"
wasm-bindgen-cli = "0.2.92"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s" # Try "z" too
strip = "debuginfo"