[package]
name = "rusteroids"
version = "0.1.0"
edition = "2021"

[features]
dev = ["bevy-inspector-egui"]

[dependencies]
bevy = { version = "0.14.1", features = ["wayland"] }
bevy-inspector-egui = { version = "0.25.1", optional = true }
rand = { version = "0.8.5", features = ["small_rng"] }
bevy_prototype_lyon = "0.12.0"
bevy_rapier2d = "0.27.0"
bevy_enoki = "0.2.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1

[profile.wasm-release]
inherits = "release"
opt-level = "s" # Try "z" too
strip = "debuginfo"